log/build_2023-05-08_18-14-24/my_bridge/stderr.log
  File "/home/cec20/Yangjiaxin/my-carla-ros-bridge/install/my_bridge/lib/python3.8/site-packages/my_bridge/bridge_wayserver_adjacent copy 2.py", line 194
    self.ego_transform_subscription = self..Subscriber('/camera/rgb/image_raw', Image)
                                           ^
SyntaxError: invalid syntax

